# rag_against_the_machine-42

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py
src/models/: schema.py
src/pipelines/: evaluator.py  generator.py  indexer.py  ingester.py  retriever.py
student/: __main__.py
