[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_against_the_machine"
version = "0.1.0"
description = "RAG against the machine - 42 Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "accelerate>=1.13.0",
    "fire>=0.7.1",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
    "numpy>=2.0.0"
    "flake8>=7.0.0",
    "mypy>=1.9.0"
]

[project.scripts]
# Esto permite que si alguien instala tu paquete, pueda ejecutar el CLI tecleando 'student'
student = "student.__main__:RAGCLI"